# AgIsoDDOPGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  EXAMPLE.iop  README.md
.github/workflows/: build.yml
_codeql_build_dir/: CMakeCache.txt
_codeql_build_dir/submodules/agisostack/: thread_test.cpp
_codeql_build_dir/submodules/sdl/: SDL_config.h.intermediate  sdl2-config  sdl2.pc
_codeql_build_dir/submodules/sdl/include/SDL2/: SDL_revision.h
include/: L2DFileDialog.hpp  gui.hpp  logsink.hpp
src/: gui.cpp  main.cpp
